Fix: Adjust z-index of icon to prevent overlap with text

--- a/src/contentScript/Content.css
+++ b/src/contentScript/Content.css
@@ -52,6 +52,7 @@
   top: 9px;
   cursor: pointer;
   right: 14px;
+  z-index: 2;
 }
 
 #copy-icon-text {
